--- a/style.css
+++ b/style.css
@@ -10,3 +10,30 @@ body {
     width: 100%;
 }
 
+.INNERCOLOR{
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.INNER_ROTATE{
+    object-fit: cover;
+    transform-origin: center;
+    animation: Inner_Rotator 2s linear infinite;
+}
+
+@keyframes Inner_Rotator {
+    0% {
+        transform: rotate(0deg);
+        scale: 0.8;
+    }
+    50% {
+        transform: rotate(180deg);
+        scale: 1;
+    }
+    100% {
+        transform: rotate(360deg);
+        scale: 0.8;
+    }
+    
+}
