--- a/style.css
+++ b/style.css
@@ -77,3 +77,17 @@ body {
 .Animate{
     transition: all linear .3s;
 }
+
+.MarqueeContainer{
+    animation: MarqueeContainer 20s linear infinite;
+}
+
+@keyframes MarqueeContainer {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+    
+}
